--- a/_posts/OperatingSystems/2020-10-07-OS-mmap.md
+++ b/_posts/OperatingSystems/2020-10-07-OS-mmap.md
@@ -29,28 +29,29 @@ return 값은 mapping이 시작하는 실제 메모리 주소_(?)_이다.
 
 
 - addr
-  커널에게 파일을 어디에 mapping하면 좋을지 제안하는 값 (보통 0 사 용) _(0은 제안하지 않음을 의미하는가?)_
+  <br>커널에게 파일을 어디에 mapping하면 좋을지 제안하는 값 (보통 0 사 용) _(0은 제안하지 않음을 의미하는가?)_
 - len
-  mapping시킬 메모리 영역의 길이 (파일의 크기라 생각하면 되겠다. <br>
-  **페이지 크기 단위여야 한다.**
+  <br>mapping시킬 메모리 영역의 길이 (파일의 크기라 생각하면 되겠다. <br>
+  <br>**페이지 크기 단위여야 한다.**
 - prot
-  mapping시 원하는 메모리 보호 정책 (읽기 전용으로 열고자 한다면 PORT_WRITE를 지정하면 안 된다.)
-  1) PORT_READ: 읽기 가능한 페이지
-  2) PORT_WRITE: 쓰기 가능한 페이지
-  3) PORT_EXEX: 실행 가능한 페이지
-  4) PORT_NONE: 접근할 수 없는 페이지
+  <br>mapping시 원하는 메모리 보호 정책 (읽기 전용으로 열고자 한다면 PORT_WRITE를 지정하면 안 된다.)
+  - PORT_READ: 읽기 가능한 페이지
+  - PORT_WRITE: 쓰기 가능한 페이지
+  - PORT_EXEX: 실행 가능한 페이지
+  - PORT_NONE: 접근할 수 없는 페이지
 - flags
-  mapping 유형과 동작 구성 요소
-  1) MAPFIXED: addr과 len 매개변수가 기존 mapping과 겹칠 경우, 중첩 페이지를 버리고 새 mapping으로 대체. (권장하지 않음) (버린다는 것은, mapping table 상에서 해당 PTE를 제거한다는 뜻?)_
-  2) MAP_SHARED: 동일 파일을 mapping한 모든 프로세스들이 공유. 객체 접근에 대한 동기화를 위해 msync, munmap을 사용.
-  3) MAP_PRIVATE: mapping을 공유하지 않는다. 파일은 쓰기 후 복사로 mapping되며 변경된 메모리 속성은 실제 파일에는 반영되지 않는다.
+  <br>mapping 유형과 동작 구성 요소
+  - MAPFIXED: addr과 len 매개변수가 기존 mapping과 겹칠 경우, 중첩 페이지를 버리고 새 mapping으로 대체. (권장하지 않음) (버린다는 것은, mapping table 상에서 해당 PTE를 제거한다는 뜻?)_
+  - MAP_SHARED: 동일 파일을 mapping한 모든 프로세스들이 공유. 객체 접근에 대한 동기화를 위해 msync, munmap을 사용.
+  - MAP_PRIVATE: mapping을 공유하지 않는다. 파일은 쓰기 후 복사로 mapping되며 변경된 메모리 속성은 실제 파일에는 반영되지 않는다.
 - fd
-  file descriptor
+  <br>file descriptor
 
 - offset
-  mapping할 때 len의 시작점을 지정
+  <br>mapping할 때 len의 시작점을 지정
 
-즉, mmap()을 사용하면 file을 process의 virtual memory에 매핑할 수 있다. 이렇게 매핑한 데이터에 파일 입출력 함수를 쓰지 않고(즉, buffer를 거치지 않고) 접근할 수 있다.
+즉, mmap()을 사용하면 file을 process의 virtual memory에 매핑할 수 있다. 
+이렇게 매핑한 데이터에 파일 입출력 함수를 쓰지 않고(즉, buffer를 거치지 않고) 접근할 수 있다.
 
 (file을 대상이라 한다면 file의 크기 만큼의 virtual space가 file에게 할당되고, file의 physical address와 virtual address가 mapping table에 로드된다는 건가?)
 
@@ -58,11 +59,17 @@ return 값은 mapping이 시작하는 실제 메모리 주소_(?)_이다.
 
 
 ```console
-You opened the file in read-only mode. Then you attempted to mmap part of it in read/write mode with MAP_SHARED set. In this context MAP_SHARED implies that if you write to the mmap'd region your changes will be committed back to the mapped file itself. You can't do this because you opened the file in read-only mode.
+You opened the file in read-only mode. 
+Then you attempted to mmap part of it in read/write mode with MAP_SHARED set. 
+In this context MAP_SHARED implies that if you write to the mmap'd region your changes will be committed back to the mapped file itself. 
+You can't do this because you opened the file in read-only mode.
 ```
 
 ```console
-MAP_PRIVATE works because writes to the mmap'd region are not committed back to the original file. When you write to the region the pages that were written to are copied to a different region of memory, possibly backed by swap space.MAP_PRIVATE works because writes to the mmap'd region are not committed back to the original file. When you write to the region the pages that were written to are copied to a different region of memory, possibly backed by swap space.
+MAP_PRIVATE works because writes to the mmap'd region are not committed back to the original file. 
+When you write to the region the pages that were written to are copied to a different region of memory, possibly backed by swap space.
+MAP_PRIVATE works because writes to the mmap'd region are not committed back to the original file. 
+When you write to the region the pages that were written to are copied to a different region of memory, possibly backed by swap space.
 ```
 
 <br><br>
