[Update] 줄 간격 수정

--- a/_posts/Term/2020-11-19-Term-Hz.md
+++ b/_posts/Term/2020-11-19-Term-Hz.md
@@ -8,8 +8,8 @@ tags: [term]
 ### 헤르츠(Hz)
 ---
 헤르츠(Hertz) 는 0과 1 신호가 한 번씩 실행되는 주기(사이클, Cycle)를 의미한다.
-즉, 1Hz는 1초에 0, 1 신호를 한 번 실행하는 것을 의미한다.
-1초에 1,000번의 신호를 실행하면 1KHz(킬로헤르츠), 100만번 실행하면 1MHz(메가헤르츠)가 된다.
+<br>즉, 1Hz는 1초에 0, 1 신호를 한 번 실행하는 것을 의미한다.
+<br>1초에 1,000번의 신호를 실행하면 1KHz(킬로헤르츠), 100만번 실행하면 1MHz(메가헤르츠)가 된다.
 
 따라서 2.26GHz는 1초에 0, 1 신호 처리가 22억 6천만번 수행된다는 것을 의미한다.
 
@@ -18,7 +18,7 @@ tags: [term]
 1 기가헤르츠(GHz) = 1,000MHz
 
 헤르츠 단위를 사용하는 컴퓨터 용어 중 가장 대표적인 것이 '**클럭(clokc)**'이다.
-클럭의 사전적 의미는 **1초에 처리하는 횟수**이다.
+<br>클럭의 사전적 의미는 **1초에 처리하는 횟수**이다.
 
 예를 들어, 클럭이 2.26GHz인 CPU는 '1초에 총 22억 6천만번' 의 클럭을 수행한다고 말할 수 있다.
 
