[Update] MeetingMinutes 카테고리 오타 수정

--- a/_posts/TIL/2020-12-03-TIL-13.md
+++ b/_posts/TIL/2020-12-03-TIL-13.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "[TIL] 13일차 20.12.03"
-categories: [TIL, MeetingMintues]
+categories: [TIL, MeetingMinutes]
 tags: [til, meetingminutes]
 ---
 
